kubernetes/chat-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-ui
  namespace: chat-ui
spec:
  selector:
    app.kubernetes.io/name: chat-ui
  ports:
    - name: http
      port: 3000
      targetPort: http
