kubernetes/chat-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ui
  namespace: chat-ui
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: chat-ui.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-ui
                port:
                  number: 3000
